# commoncli

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  pkg.pc.in  req.sh  version.h.in  version.sh
src/: Makefile.am  buffer.c  checksum.c  cli2process.h  command.c  command.h  config.h  daemon.c  distribute.c  distribute.h  filter.c  getopt.c  getopt1.c  hash.c  keychain.c  linklist.c  log.c  log.h  main_cli.c  md5-gnu.h  md5.c  md5.h  memory.c  memory.h  network.c  pid_output.c  plist.c  pqueue.c  prefix.c  print_version.c  privs.c  routemap.c  sigevent.c  sigevent.h  smux.c  sockopt.c  sockopt.h  sockunion.c  str.c  str.h  (+10 more)
test/: Makefile.am  main_cli.cpp
